{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 60,
  "lineage": "0020ab3d-3b9f-fe0a-3e17-fd5efadb1696",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig-deveqi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:324237211506:internet-gateway/igw-081c15ea7458fc449",
            "id": "igw-081c15ea7458fc449",
            "owner_id": "324237211506",
            "tags": {
              "Name": "ig_deveqi"
            },
            "tags_all": {
              "Name": "ig_deveqi",
              "managed-by": "terraform",
              "owner": "Chrystian Paim"
            },
            "vpc_id": "vpc-02b6beba54f5187f1"
          },
          "dependencies": [
            "aws_vpc.vpc_deveqi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:324237211506:loadbalancer/app/DeveqiALB/8dcd25d465cc1390",
            "arn_suffix": "app/DeveqiALB/8dcd25d465cc1390",
            "desync_mitigation_mode": "defensive",
            "dns_name": "DeveqiALB-142651970.sa-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:sa-east-1:324237211506:loadbalancer/app/DeveqiALB/8dcd25d465cc1390",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "DeveqiALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00c778b15c7410453"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-080a288826a878f85"
              },
              {
                "subnet_id": "subnet-0db4e5df47acec16c"
              }
            ],
            "subnets": [
              "subnet-080a288826a878f85",
              "subnet-0db4e5df47acec16c"
            ],
            "tags_all": {
              "managed-by": "terraform",
              "owner": "Chrystian Paim"
            },
            "vpc_id": "vpc-02b6beba54f5187f1",
            "xff_header_processing_mode": "append",
            "zone_id": "Z2P70J7HTTTPLU"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.deveqi-public-a",
            "aws_subnet.deveqi-public-b",
            "aws_vpc.vpc_deveqi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:324237211506:listener/app/DeveqiALB/8dcd25d465cc1390/a58d5c574806cd80",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:sa-east-1:324237211506:targetgroup/ALB-TG/9fbf8f2d85726af7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:324237211506:listener/app/DeveqiALB/8dcd25d465cc1390/a58d5c574806cd80",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:sa-east-1:324237211506:loadbalancer/app/DeveqiALB/8dcd25d465cc1390",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "managed-by": "terraform",
              "owner": "Chrystian Paim"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.lbtg",
            "aws_security_group.alb",
            "aws_subnet.deveqi-public-a",
            "aws_subnet.deveqi-public-b",
            "aws_vpc.vpc_deveqi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lbtg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:324237211506:targetgroup/ALB-TG/9fbf8f2d85726af7",
            "arn_suffix": "targetgroup/ALB-TG/9fbf8f2d85726af7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:324237211506:targetgroup/ALB-TG/9fbf8f2d85726af7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ALB-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "managed-by": "terraform",
              "owner": "Chrystian Paim"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02b6beba54f5187f1"
          },
          "dependencies": [
            "aws_vpc.vpc_deveqi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "deveqi-rtprivate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:324237211506:route-table/rtb-0fd4a05fd53ec5915",
            "id": "rtb-0fd4a05fd53ec5915",
            "owner_id": "324237211506",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "deveqi-rtprivate"
            },
            "tags_all": {
              "Name": "deveqi-rtprivate",
              "managed-by": "terraform",
              "owner": "Chrystian Paim"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b6beba54f5187f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_deveqi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "deveqi-rtpublic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:324237211506:route-table/rtb-0e6721d50d0a7e790",
            "id": "rtb-0e6721d50d0a7e790",
            "owner_id": "324237211506",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-081c15ea7458fc449",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "deveqi-public-route"
            },
            "tags_all": {
              "Name": "deveqi-public-route",
              "managed-by": "terraform",
              "owner": "Chrystian Paim"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b6beba54f5187f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig-deveqi",
            "aws_vpc.vpc_deveqi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-deveqi-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c2988246c586754",
            "route_table_id": "rtb-0fd4a05fd53ec5915",
            "subnet_id": "subnet-0664fcd700e68e05c"
          },
          "dependencies": [
            "aws_route_table.deveqi-rtprivate",
            "aws_subnet.deveqi-private-a",
            "aws_vpc.vpc_deveqi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-deveqi-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054dfdc346035042a",
            "route_table_id": "rtb-0fd4a05fd53ec5915",
            "subnet_id": "subnet-0612c1ad38dea9938"
          },
          "dependencies": [
            "aws_route_table.deveqi-rtprivate",
            "aws_subnet.deveqi-private-b",
            "aws_vpc.vpc_deveqi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-deveqi-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ccd0a6f4e4042fd9",
            "route_table_id": "rtb-0e6721d50d0a7e790",
            "subnet_id": "subnet-080a288826a878f85"
          },
          "dependencies": [
            "aws_internet_gateway.ig-deveqi",
            "aws_route_table.deveqi-rtpublic",
            "aws_subnet.deveqi-public-a",
            "aws_vpc.vpc_deveqi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-deveqi-public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5f27445dab508e3",
            "route_table_id": "rtb-0e6721d50d0a7e790",
            "subnet_id": "subnet-0db4e5df47acec16c"
          },
          "dependencies": [
            "aws_internet_gateway.ig-deveqi",
            "aws_route_table.deveqi-rtpublic",
            "aws_subnet.deveqi-public-b",
            "aws_vpc.vpc_deveqi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:324237211506:security-group/sg-00c778b15c7410453",
            "description": "LoadBalancerSG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00c778b15c7410453",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "324237211506",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "managed-by": "terraform",
              "owner": "Chrystian Paim"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b6beba54f5187f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_deveqi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "autoscaling",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:324237211506:security-group/sg-0141253eb9655b1b6",
            "description": "Security group auto scaling",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0141253eb9655b1b6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00c778b15c7410453"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "autoscaling",
            "name_prefix": "",
            "owner_id": "324237211506",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "managed-by": "terraform",
              "owner": "Chrystian Paim"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b6beba54f5187f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.vpc_deveqi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mongodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:324237211506:security-group/sg-01e8d444fb4a65ac5",
            "description": "sg mongob",
            "egress": [],
            "id": "sg-01e8d444fb4a65ac5",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/21"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03ae267534271f72a"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "mongodb",
            "name_prefix": "",
            "owner_id": "324237211506",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mongodb"
            },
            "tags_all": {
              "Name": "mongodb",
              "managed-by": "terraform",
              "owner": "Chrystian Paim"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b6beba54f5187f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-deveqi",
            "aws_subnet.deveqi-private-a",
            "aws_vpc.vpc_deveqi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-deveqi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:324237211506:security-group/sg-03ae267534271f72a",
            "description": "Security group that allows ssh/https and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.3.0/24"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "id": "sg-03ae267534271f72a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_deveqi_api",
            "name_prefix": "",
            "owner_id": "324237211506",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-deveqi-api"
            },
            "tags_all": {
              "Name": "sg-deveqi-api",
              "managed-by": "terraform",
              "owner": "Chrystian Paim"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b6beba54f5187f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.deveqi-private-a",
            "aws_vpc.vpc_deveqi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "deveqi-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:324237211506:subnet/subnet-0664fcd700e68e05c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0664fcd700e68e05c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324237211506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "deveqi-private-a"
            },
            "tags_all": {
              "Name": "deveqi-private-a",
              "managed-by": "terraform",
              "owner": "Chrystian Paim"
            },
            "vpc_id": "vpc-02b6beba54f5187f1"
          },
          "dependencies": [
            "aws_vpc.vpc_deveqi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "deveqi-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:324237211506:subnet/subnet-0612c1ad38dea9938",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0612c1ad38dea9938",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324237211506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "deveqi-private-b"
            },
            "tags_all": {
              "Name": "deveqi-private-b",
              "managed-by": "terraform",
              "owner": "Chrystian Paim"
            },
            "vpc_id": "vpc-02b6beba54f5187f1"
          },
          "dependencies": [
            "aws_vpc.vpc_deveqi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "deveqi-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:324237211506:subnet/subnet-080a288826a878f85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080a288826a878f85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324237211506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "deveqi-public-a"
            },
            "tags_all": {
              "Name": "deveqi-public-a",
              "managed-by": "terraform",
              "owner": "Chrystian Paim"
            },
            "vpc_id": "vpc-02b6beba54f5187f1"
          },
          "dependencies": [
            "aws_vpc.vpc_deveqi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "deveqi-public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:324237211506:subnet/subnet-0db4e5df47acec16c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db4e5df47acec16c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324237211506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "deveqi-public-b"
            },
            "tags_all": {
              "Name": "deveqi-public-b",
              "managed-by": "terraform",
              "owner": "Chrystian Paim"
            },
            "vpc_id": "vpc-02b6beba54f5187f1"
          },
          "dependencies": [
            "aws_vpc.vpc_deveqi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_deveqi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:324237211506:vpc/vpc-02b6beba54f5187f1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/21",
            "default_network_acl_id": "acl-02a82eae7d1febb97",
            "default_route_table_id": "rtb-06d4becf20fd5aff3",
            "default_security_group_id": "sg-0bc1b4f56ddf087e1",
            "dhcp_options_id": "dopt-002c7867",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02b6beba54f5187f1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06d4becf20fd5aff3",
            "owner_id": "324237211506",
            "tags": {
              "Name": "vpc_deveqi"
            },
            "tags_all": {
              "Name": "vpc_deveqi",
              "managed-by": "terraform",
              "owner": "Chrystian Paim"
            }
          }
        }
      ]
    }
  ]
}